--- a/Hlw player/index.html
+++ b/Hlw player/index.html
@@ -1,32 +1,21 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <title>Hlw player</title>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <!-- Css -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/magnific-popup.css" />
-  <link rel="stylesheet" href="css/font-icons.css" />
-  <link rel="stylesheet" href="css/sliders.css" />
   <link rel="stylesheet" href="css/style.css" />
-
 </head>
-
 <body>
-
-  <!-- Preloader -->
   <div class="loader-mask">
     <div class="loader">
       "Loading..."
     </div>
   </div>
-
   <main class="main-wrapper">
     <div class="content-wrapper oh">
-
-      <!-- Hero -->
       <section class="hero bg-img" style="background-image: url(img/hero/hero_1.jpg);">
         <div class="container hero__container container-full-height">
           <div class="hero__outer">
@@ -37,10 +26,7 @@
             </div>            
           </div>          
         </div>        
-      </section> <!-- end hero -->
-
-
-      <!-- Intro -->
+      </section>
       <section class="section-wrap section-wrap--md animate">
         <div class="container">
           <div class="row">
@@ -58,15 +44,12 @@
 		<p class="lead" style="font-family:'微软雅黑'">· Winform-FormShadow</p>
             </div>
           </div>
-        </div>        
-      </section> <!-- end intro -->
+        </div>
+      </section>
 
-      <!-- Portfolio Masonry -->
       <section class="section-wrap section-wrap--md pt-0">
         <div class="container">
-
           <div id="masonry-grid" class="works-grid small-gutter">
-
             <div class="work-item isotope-large hover-trigger hover-scale hover-1">
               <div class="work-item__container">
                 <div class="work-item__img-holder">
@@ -80,8 +63,7 @@
                   </a>              
                 </div>
               </div> 
-            </div> <!-- end work-item -->
-
+            </div>
             <div class="work-item isotope-small hover-trigger hover-scale hover-1">
               <div class="work-item__container">
                 <div class="work-item__img-holder">
@@ -95,8 +77,7 @@
                   </a>              
                 </div>
               </div> 
-            </div> <!-- end work-item -->
-
+            </div>
             <div class="work-item isotope-small hover-trigger hover-scale hover-1">
               <div class="work-item__container">
                 <div class="work-item__img-holder">
@@ -110,8 +91,7 @@
                   </a>              
                 </div>
               </div> 
-            </div> <!-- end work-item -->
-
+            </div>
             <div class="work-item isotope-large hover-trigger hover-scale hover-1">
               <div class="work-item__container">
                 <div class="work-item__img-holder">
@@ -125,45 +105,35 @@
                   </a>              
                 </div>
               </div> 
-            </div> <!-- end work-item -->
-
+            </div>
           </div>
         </div>
-      </section> <!-- end portfolio masonry -->      
+      </section>
 
-
-      <!-- Footer -->
       <footer class="footer bg-dark">
         <div class="container">
           <div class="footer__widgets">
             <div class="row">
-
               <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="widget footer__get-in-touch text-sm-center">
-                  
                   <p class="footer__get-in-touch__paragraph">
                     <a href="mailto:2691948959@qq.com">Email: 2691948959@qq.com</a>
                   </p>
                 </div>
-              </div> <!-- end get in touch -->
-
+              </div>
               <div class="col-md-6 col-md-offset-2 col-sm-6 col-xs-12">
                 <div class="widget footer__nav-links text-right text-sm-center">
                   <p>Copyright© hlwdy.</p>
                 </div>
-              </div> <!-- end nav links / socials -->
-
+              </div>
             </div>
           </div>    
         </div>
-      </footer> <!-- end footer -->
-
-    </div> <!-- end content wrapper -->
-  </main> <!-- end main wrapper -->
-  
+      </footer> 
+    </div>
+  </main>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/plugins.js"></script>  
   <script type="text/javascript" src="js/scripts.js"></script>
-    
 </body>
 </html>
