--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ $(window).on('load', function() {
 	</div>
         <nav>
           <ul>
-            <li><a href="#1"> <em><i class="fa fa-fw fa-language"></i>Homepage</em></a></li>
+            <li><a href="#1"> <em>Homepage</em></a></li>
             <li><a href="#2"> <em>Hlw player</em></a></li>
 	    <li><a href="#3"> <em>Online Markdown</em></a></li>
 	    <li><a href="#4"> <em>Online IDE</em></a></li>
