--- a/personal homepage/hlwdy.html
+++ b/personal homepage/hlwdy.html
@@ -131,7 +131,7 @@
               <p class="s4"> <img src="hlwdy_files/a.png" width="42" height="42" alt=""/>2691948959</p>
 	      <p class="s1"> Email</p>
               <p class="s4"> <a href="mailto:hlwdyck@qq.com">hlwdyck@qq.com</a></p>
-		<p class="s4"> <a href="mailto:hlwdyck@gamil.com">hlwdyck@gamil.com</a></p>
+		<p class="s4"> <a href="mailto:hlwdyck@gmail.com">hlwdyck@gmail.com</a></p>
 		<p class="s1"> Blog</p>
               <p class="s4"> <img src="hlwdy_files/blog.png" width="36" height="36" alt=""/><a href="https://hlwdyblog.tk">Hlwdy's blog</a></p>
             </div>
