--- a/oi/problem.html
+++ b/oi/problem.html
@@ -33,6 +33,11 @@ pre{
 </style>
 </head>
 <body>
+<script>
+$("img").on('error',function(){
+	var imgs=document.getElementsByTagName('img');for(var i=0;i<imgs.length;i++)imgs[i].referrerPolicy="no-referrer";
+});
+</script>
 <div id="maindiv">
 <div id="content"></div>
 </div>
