--- a/oi/problem.html
+++ b/oi/problem.html
@@ -24,11 +24,57 @@
 	border-radius:5px;
 	box-shadow: 3px 3px 17px rgba(70,70,70,0.2);
 }
+p{
+	white-space:pre-wrap;
+}
 pre{
 	border-radius:5px;
 	padding:14px;
 	background-color:rgba(170,170,170,0.2);
 	width:60%;
+}
+.loader-mask{
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #969696;
+	z-index: 99999;
+}
+.loader{
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	font-size: 5px;
+	width: 5em;
+	height: 5em;
+	margin: -25px 0 0 -25px;
+	text-indent: -9999em;
+	border-top: 0.5em solid #191919;
+	border-right: 0.5em solid rgba(245, 245, 245, 0.5);
+	border-bottom: 0.5em solid rgba(245, 245, 245, 0.5);
+	border-left: 0.5em solid rgba(245, 245, 245, 0.5);
+	-webkit-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-animation: load8 1.1s infinite linear;
+	animation: load8 1.1s infinite linear;
+}
+.loader,.loader:after {
+	border-radius: 50%;
+	width: 10em;
+	height: 10em;
+}
+@keyframes load8{
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
 }
 </style>
 </head>
@@ -36,6 +82,16 @@ pre{
 <script>
 window.addEventListener('error',function(e){if(e.target.tagName.toUpperCase()==='IMG' ){e.target.referrerPolicy="no-referrer";}},true);
 </script>
+<script>
+$(window).on('load', function() {
+	$('.loader').fadeOut();
+  });
+</script>
+<div class="loader-mask">
+	<div class="loader">
+		"Loading..."
+	</div>
+</div>
 <div id="maindiv">
 <div id="content"></div>
 </div>
